k8s1/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: backend
  template:
    metadata:    
      name: backend-pod
      namespace: chat-app
      labels: 
        app: backend
    spec: 
      containers:  
      - name: chatapp-backend   
        image: nishameshram/chatapp-backend:latest
        ports: 
        - containerPort: 5001
