k8s1/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name:  frontend 
  namespace: chat-app 
spec:
  selector:
    app:  frontend
  ports:
  - port:  80
    targetPort:  80
